# opengl_tutorials

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  axe.stl  readme.md
src/: CMakeLists.txt  action_ctx.hpp  camera.cpp  camera.h  entity.h  entity_manager.cpp  entity_manager.h  fps_counter.cpp  fps_counter.hpp  geometry.h  helper.h  main.cpp  object.cpp  object.hpp  plane.cpp  plane.h  prototypes.hpp  quad.cpp  quad.h  scene.cpp  scene.hpp  shader.cpp  shader.h  shader_prog.cpp  shader_prog.h  singleton.h  sphere.cpp  sphere.h  stl.hpp  timer.cpp  timer.hpp  transform.cpp  transform.h  triangle.cpp  triangle.h  vertex.h
src/behaviors/: rotate_around_center.cpp  rotate_around_center.hpp
src/components/: camera.cpp  camera.hpp  component.cpp  component.hpp  input_system.cpp  input_system.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  texture2d.cpp  texture2d.hpp  transform.cpp  transform.hpp
src/components/sample_meshes/: stl_mesh.cpp  stl_mesh.hpp  triangle_mesh.cpp  triangle_mesh.hpp
src/components/vertex/: color.hpp  descriptor.hpp  normal.hpp  position.hpp  uv_coords.hpp  vertex.hpp
src/shader/: fragment.frag  vertex.vert
test/: source.cpp
